[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/dialog_panel.gd" type="Script" id=1]
[ext_resource path="res://gui/dialog_manager.gd" type="Script" id=2]
[ext_resource path="res://assets/images/ui/npc_dialog/dialog_bread_before.png" type="Texture" id=3]
[ext_resource path="res://global/font/main.tres" type="DynamicFont" id=4]

[sub_resource type="Animation" id=1]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 272 ), Vector2( 0, 108 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 108 ), Vector2( 0, 272 ) ]
}

[node name="dialogue_panel" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
pause_mode = 2
margin_top = 272.0
margin_right = 480.0
margin_bottom = 397.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel"]
texture = ExtResource( 3 )
centered = false

[node name="dialog" type="VBoxContainer" parent="Panel"]
margin_left = 5.77649
margin_top = 3.94116
margin_right = 471.776
margin_bottom = 118.941
size_flags_vertical = 0
custom_constants/separation = 7
alignment = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="HBoxContainer" parent="Panel/dialog"]
margin_right = 466.0
margin_bottom = 48.0

[node name="TextureRect" type="TextureRect" parent="Panel/dialog/question"]
margin_right = 60.0
margin_bottom = 48.0
rect_min_size = Vector2( 60, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="RichTextLabel" parent="Panel/dialog/question"]
margin_left = 64.0
margin_right = 466.0
margin_bottom = 48.0
rect_min_size = Vector2( 400, 48 )
size_flags_horizontal = 3
custom_fonts/normal_font = ExtResource( 4 )
meta_underlined = false
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam efficitur cursus aliquet. Integer sit amet turpis ac ex tincidunt tempus eget vitae lorem. Nulla nec ligula sit amet leo tempus semper. Morbi viverra bibendum erat, at mattis enim blandit nec. Quisque est lectus, ornare non "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel/dialog"]
margin_top = 55.0
margin_right = 466.0
margin_bottom = 55.0
size_flags_vertical = 3

[node name="responses" type="VBoxContainer" parent="Panel/dialog"]
margin_top = 62.0
margin_right = 466.0
margin_bottom = 122.0
custom_constants/separation = 0

[node name="response1" type="Button" parent="Panel/dialog/responses"]
margin_right = 466.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 4 )
text = "option1"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="response2" type="Button" parent="Panel/dialog/responses"]
margin_top = 20.0
margin_right = 466.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
text = "option2"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="response3" type="Button" parent="Panel/dialog/responses"]
margin_top = 40.0
margin_right = 466.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 4 )
text = "option3"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slide_in = SubResource( 1 )
anims/slide_out = SubResource( 2 )
